Добавил удалени графиков и увольнение сотрудников. Добавил логирование в файл